--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -16,9 +18,25 @@
   }
 }
 
+body::-webkit-scrollbar {
+  display: block;
+  width: 4px;
+  background-image: linear-gradient(#9d174d, #ca8a04, #065f46);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #fff;
+  border-radius: 50px;
+}
+
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.box-shadow {
+  border: 2px solid black;
+  box-shadow: 0px 12px 0px black;
 }
